Bravecto_Day01 update links

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <!-- NORMAL SLIDE -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <script type="text/javascript" src="../js/noBounce.js"></script>
-    <script type="text/javascript" src="../js/veeva-library.js"></script>
-    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.mobile-1.4.5.min.js"></script>
-    <script type="text/javascript" src="../js/general_online.js"></script>
-    <script type="text/javascript" src="../js/globals.js"></script>
-    <script type="text/javascript" src="../js/slideflow.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <script type="text/javascript" src="js/noBounce.js"></script>
+    <script type="text/javascript" src="js/veeva-library.js"></script>
+    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+    <script type="text/javascript" src="js/general_online.js"></script>
+    <script type="text/javascript" src="js/globals.js"></script>
+    <script type="text/javascript" src="js/slideflow.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
     <header>
