final day two fixes

--- a/index.html
+++ b/index.html
@@ -51,64 +51,64 @@
                         <p>Tierpopulation Deutschland</p>
                     </div>
                     <div id="tierp_num1">
-                        <p>10,600,000</p>
+                        <p class="center">10,600,000</p>
                     </div>
                     <div id="tierp_num2">
-                        <p>15,200,000</p>
+                        <p class="center">15,200,000</p>
                     </div>
                     <div id="behan">
                         <p>Behandelte Tiere</p>
                     </div>
                     <div id="behan_num1">
-                        <p>6,360,000</p>
+                        <p class="center">6,360,000</p>
                     </div>
                     <div id="behan_num2">
-                        <p>3,040,000</p>
+                        <p class="center">3,040,000</p>
                     </div>
                     <div id="prax">
                         <p>Praxen mit Kleintieranteil in Deutschland</p>
                     </div>
                     <div id="prax_num1">
-                        <p>9,148</p>
+                        <p class="center">9,148</p>
                     </div>
                     <div id="prax_num2">
-                        <p>9,148</p>
+                        <p class="center">9,148</p>
                     </div>
                     <div id="anza">
                         <p>Anzahl Tiere pro Praxis Ø </p>
                     </div>
                     <div id="anza_num1">
-                        <p>695</p>
+                        <p class="center">695</p>
                     </div>
                     <div id="anza_num2">
-                        <p>332</p>
+                        <p class="center">332</p>
                     </div>
                     <div id="tiere">
                         <p>Tiere in Ihrer Praxis</p>
                     </div>
                     <div class="justify_left align_center" id="tiere_input1">
-                        <input type="text" id="b12"/>
+                        <input class="center" type="text" id="b12"/>
                     </div>
                     <div class="justify_left align_center" id="tiere_input2">
-                        <input type="text" id="c12"/>
+                        <input class="center" type="text" id="c12"/>
                     </div>
                     <div id="anteil">
                         <p>Anteil mit Bravecto behandelte Tiere in Ihrer Praxis %</p>
                     </div>
                     <div class="justify_left align_center" id="anteil_input1">
-                        <input type="text" id="b13"/>
+                        <input class="center" type="text" id="b13"/>
                     </div>
                     <div class="justify_left align_center" id="anteil_input2">
-                        <input type="text" id="c13"/>
+                        <input class="center" type="text" id="c13"/>
                     </div>
                     <div id="abgeg">
                         <p>Abgegebene Bravecto Behandlungen 2022</p>
                     </div>
                     <div class="justify_left align_center" id="abgeg_input1">
-                        <input type="text" id="b14"/>
+                        <input class="center" type="text" id="b14"/>
                     </div>
                     <div class="justify_left align_center" id="abgeg_input2">
-                        <input type="text" id="c14"/>
+                        <input class="center" type="text" id="c14"/>
                     </div>
                 </div>
             </div>
@@ -117,26 +117,26 @@
                     <div id="monate">
                         <h3>Monate*, die Ihre Patienten geschützt sind</h3>
                     </div>
-                    <div id="monate_num1"><h3 id="b18"></h3></div>
-                    <div id="monate_num2"><h3 id="c18"></h3></div>
+                    <div id="monate_num1"><h3 class="center" id="b18"></h3></div>
+                    <div id="monate_num2"><h3 class="center" id="c18"></h3></div>
 
                     <div id="brave">
                         <p><b>Ø Bravecto Behandlungen pro Tier</b></p>
                     </div>
-                    <div id="brave_num1"><b><p id="b19"></p></b></div>
-                    <div id="brave_num2"><b><p id="c19"></p></b></div>
+                    <div id="brave_num1"><b><p class="center" id="b19"></p></b></div>
+                    <div id="brave_num2"><b><p class="center" id="c19"></p></b></div>
                     <div id="fill_header"></div>
                     <div id="mit">
                         <p>mit Bravecto geschützte Monate*</p>
                     </div>
-                    <div id="mit_num1"><p id="b20"></p></div>
-                    <div id="mit_num2"><p id="c20"></p></div>
+                    <div id="mit_num1"><p class="center" id="b20"></p></div>
+                    <div id="mit_num2"><p class="center" id="c20"></p></div>
 
                     <div id="unges">
                         <p>ungeschützte Monate</p>
                     </div>
-                    <div id="unges_num1"><p id="b21"></p></div>
-                    <div id="unges_num2"><p id="c21"></p></div>
+                    <div id="unges_num1"><p class="center" id="b21"></p></div>
+                    <div id="unges_num2"><p class="center" id="c21"></p></div>
                 </div>
                 <div class="slider_container">
                     <div class="animal_container">
@@ -150,27 +150,27 @@
                         </div>
                         <div class="guage_container top_margin">
                             <div class="guage_slider"  id="slider_dog"></div>
-                            <p class="bottom_num" style="left:-4">0</p>
-                            <p class="bottom_num" style="left:56px;">1</p>
-                            <p class="bottom_num" style="left:116px;">2</p>
-                            <p class="bottom_num" style="left:176px;">3</p>
-                            <p class="bottom_num" style="left:236px;">4</p>
-                            <p class="bottom_num" style="left:296px;">5</p>
-                            <p class="bottom_num" style="left:356px;">6</p>
-                            <p class="bottom_num" style="left:416px;">7</p>
-                            <p class="bottom_num" style="left:476px;">8</p>
-                            <p class="bottom_num" style="left:536px;">9</p>
-                            <p class="bottom_num" style="left:596px;">10</p>
-                            <p class="bottom_num" style="left:656px;">11</p>
-                            <p class="bottom_num" style="left:716px;">12</p>
+                            <p class="bottom_num" style="left:-8">0</p>
+                            <p class="bottom_num" style="left:42px;">1</p>
+                            <p class="bottom_num" style="left:92px;">2</p>
+                            <p class="bottom_num" style="left:142px;">3</p>
+                            <p class="bottom_num" style="left:192px;">4</p>
+                            <p class="bottom_num" style="left:242px;">5</p>
+                            <p class="bottom_num" style="left:292px;">6</p>
+                            <p class="bottom_num" style="left:342px;">7</p>
+                            <p class="bottom_num" style="left:392px;">8</p>
+                            <p class="bottom_num" style="left:442px;">9</p>
+                            <p class="bottom_num" style="left:492px;">10</p>
+                            <p class="bottom_num" style="left:542px;">11</p>
+                            <p class="bottom_num" style="left:592px;">12</p>
                         </div>
                     </div>
                     <div>
                         <div class="glossary">
                             <div class="circle" style="background:#995205;"></div>
                             <span><p>geschützte Monate</p></span>
-                            <div class="circle" style="background:#f59c00;"></div>
-                            <span><p>ungeschützte Monate</p></span>
+                            <div class="circle base" style="background:#f59c00;"></div>
+                            <span><p class="base">ungeschützte Monate</p></span>
                             
                         </div>
                     </div>
@@ -182,6 +182,7 @@
                 <p>
                     *Die dargestellten Monate sind repräsentativ für das Verhältnis und zur Darstellung eines Bruchteils des ganzjährigen Schutzes. Bravecto bietet einen 12-wöchigen Schutz.**
                 </p>
+                <div style="height:20px;"></div>
             </footer>
         </section>
         <section class="hidden" id="section2">
