tab two structure and logic (not done)

--- a/index.html
+++ b/index.html
@@ -86,28 +86,28 @@
                     <div id="tiere">
                         <p>Tiere in Ihrer Praxis</p>
                     </div>
-                    <div class="justify_left align_center" id="tiere_input1">
+                    <div class="justify_center align_center" id="tiere_input1">
                         <input class="center" type="text" id="b12"/>
                     </div>
-                    <div class="justify_left align_center" id="tiere_input2">
+                    <div class="justify_center align_center" id="tiere_input2">
                         <input class="center" type="text" id="c12"/>
                     </div>
                     <div id="anteil">
                         <p>Anteil mit Bravecto behandelte Tiere in Ihrer Praxis %</p>
                     </div>
-                    <div class="justify_left align_center" id="anteil_input1">
+                    <div class="justify_center align_center" id="anteil_input1">
                         <input class="center" type="text" id="b13"/>
                     </div>
-                    <div class="justify_left align_center" id="anteil_input2">
+                    <div class="justify_center align_center" id="anteil_input2">
                         <input class="center" type="text" id="c13"/>
                     </div>
                     <div id="abgeg">
                         <p>Abgegebene Bravecto Behandlungen 2022</p>
                     </div>
-                    <div class="justify_left align_center" id="abgeg_input1">
+                    <div class="justify_center align_center" id="abgeg_input1">
                         <input class="center" type="text" id="b14"/>
                     </div>
-                    <div class="justify_left align_center" id="abgeg_input2">
+                    <div class="justify_center align_center" id="abgeg_input2">
                         <input class="center" type="text" id="c14"/>
                     </div>
                 </div>
@@ -186,7 +186,112 @@
             </footer>
         </section>
         <section class="hidden" id="section2">
-            <h3>section 2</h3>
+            <div class="chart_card margin_top_2">
+                <div class="behand_grid">
+                    <div id="behand_title">
+                        <h3>Tierarztpraxis</h3>
+                    </div>
+                    <div class="justify_center" id="dog2">
+                        <img src="public/alke.svg" alt="dog"/>
+                    </div>
+                    <div class="justify_center" id="cat2">
+                        <img src="public/spot.svg" alt="cat"/>
+                    </div>
+                    <div class="justify_center" id="dog3">
+                        <img src="public/alke.svg" alt="dog"/>
+                    </div>
+                    <div class="justify_center" id="cat3">
+                        <img src="public/spot.svg" alt="cat"/>
+                    </div>
+                    <div id="ihr">
+                        <p><b>Ihr Potential: Behandlungen</b></p>
+                    </div>
+                    <div id="monate3">
+                        <p>3 Monate* Schutz</p>
+                    </div>
+                    <div id="monate3_dog"><p class="center" id="monate3_dog_p"></p></div>
+                    <div id="monate3_cat"><p class="center" id="monate3_cat_p"></p></div>
+                    <div id="monate3_dogcat"><p class="center" id="monate3_dogcat_p"></p></div>
+                    <div id="monate6">
+                        <p>6 Monate* Schutz</p>
+                    </div>
+                    <div id="monate6_dog"><p class="center" id="monate6_dog_p"></p></div>
+                    <div id="monate6_cat"><p class="center" id="monate6_cat_p"></p></div>
+                    <div id="monate6_dogcat"><p class="center" id="monate6_dogcat_p"></p></div>
+                    <div id="monate9">
+                        <p>9 Monate* Schutz</p>
+                    </div>
+                    <div id="monate9_dog"><p class="center" id="monate9_dog_p"></p></div>
+                    <div id="monate9_cat"><p class="center" id="monate9_cat_p"></p></div>
+                    <div id="monate9_dogcat"><p class="center" id="monate9_dogcat_p"></p></div>
+                    <div id="ganzj">
+                        <p>Ganzjähriger* Schutz</p>
+                    </div>
+                    <div id="ganzj_dog"><p class="center" id="ganzj_dog_p"></p></div>
+                    <div id="ganzj_cat"><p class="center" id="ganzj_cat_p"></p></div>
+                    <div id="ganzj_dogcat"><p class="center" id="ganzj_dogcat_p"></p></div>
+                </div>
+            </div>
+            <div class="chart_card margin_top_2">
+                <div class="brave_grid">
+                    <div id="brave_22" class="justify_center align_center" >
+                        <p>Bravecto Behandlungen 2022</p>
+                    </div>
+                    <div id="brave_22_dog" class="justify_center align_center" >
+                        <p id="brave_22_dog_p" class="justify_center" ></p>
+                    </div>
+                    <div id="brave_22_cat" class="justify_center align_center" >
+                        <p id="brave_22_cat_p" class="justify_center" ></p>
+                    </div>
+                    <div id="brave_22_dogcat" class="justify_center align_center" >
+                        <p id="brave_22_dogcat_p"></p>
+                    </div>
+                    <div id="brave_23_bg" class="justify_center align_center" >
+                        <p>Bravecto Behandlungen 2023 bisher gekauft</p>
+                    </div>
+                    <div id="brave_23_bg_dog" class="justify_center align_center">
+                        <input class="center" id="brave_23_bg_dog_p" type="text"/>
+                    </div>
+                    <div id="brave_23_bg_cat" class="justify_center align_center">
+                        <input class="center" id="brave_23_bg_cat_p" type="text"/>
+                    </div>
+                    <div id="brave_23_bg_dogcat" class="justify_center  align_center" ><p id="brave_23_bg_dogcat_p"></p></div>
+                    <div id="brave_23_b">
+                        <p>Bravecto Behandlungen 2023 bisher gekauft</p>
+                    </div>
+                    <div id="brave_23_b_dog"><p id="brave_23_b_dog_p"></p></div>
+                    <div id="brave_23_b_cat"><p id="brave_23_b_cat_p"></p></div>
+                    <div id="brave_23_b_dogcat"><p id="brave_23_b_dogcat_p"></p></div>
+
+
+                    <div id="final1">
+                        <p>Monate*, die Ihre Patienten mit Bravecto geschützt waren 2022</p>
+                    </div>
+                    <div id="final1_num1"><p id="final1_num1_p"></p></div>
+                    <div id="final1_num2"><p id="final1_num2_p"></p></div>
+                    <div id="final2">
+                        <p>Monate*, die Ihre Patienten in 2023 mit Bravecto mit den bisher gekauften Mengen geschützt werden</p>
+                    </div>
+                    <div id="final2_num1"><p id="final2_num1_p"></p></div>
+                    <div id="final2_num2"><p id="final2_num2_p"></p></div>
+                    <div id="final3">
+                        <p>Wie viele Monate* möchten Sie Ihre Patienten schützen?</p>
+                    </div>
+                    <div id="final3_num1" class="justify_center align_center">
+                        <input type="text" id="final2_num1_p"/>
+                    </div>
+                    <div id="final3_num2" class="justify_center align_center">
+                        <input type="text" id="final2_num2_p"/>
+                    </div>
+                </div>
+            </div>
+            <div class="subtext">
+                <p>Hinweis: Die individuell eingegebenen Daten werden weder gespeichert noch verarbeitet. Sie werden nach der Präsentation sofort gelöscht.</p>
+            </div>
+            <div class="subtext">
+                <p>*Die dargestellten Monate sind repräsentativ für das Verhältnis und zur Darstellung eines Bruchteils des ganzjährigen Schutzes. Bravecto bietet einen 12-wöchigen Schutz.**</p>
+            </div>
+
         </section>
         <section class="hidden" id="section3">
             <div class="border_padding">
