--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <p id="brave_23_bg_dogcat_p"></p>
                     </div>
                     <div id="brave_23_b" class="justify_left align_center">
-                        <p>Bravecto Behandlungen 2023 bisher gekauft</p>
+                        <p>Bravecto Behandlungen 2023 bisher benötigt</p>
                     </div>
                     <div id="brave_23_b_dog" class="justify_center align_center">
                         <p id="brave_23_b_dog_p"></p>
