changes from customer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <p>Anteil mit Bravecto behandelte Tiere in Ihrer Praxis %</p>
                     </div>
                     <div class="justify_center align_center" id="anteil_input1">
-                        <input class="center" type="text" id="b13"/>
+                        <input class="center" type="text" id="b13"/><div style="margin-left:-13px;top:0;left:100px;"><span>%</span></div>
                     </div>
                     <div class="justify_center align_center" id="anteil_input2">
                         <input class="center" type="text" id="c13"/>
@@ -167,10 +167,10 @@
                     </div>
                     <div>
                         <div class="glossary">
-                            <div class="circle" style="background:#995205;"></div>
-                            <span><p>geschützte Monate</p></span>
-                            <div class="circle base" style="background:#f59c00;"></div>
-                            <span><p class="base">ungeschützte Monate</p></span>
+                            <div class="circle" style="background:#995205;position: relative;background: #602c6b;top: -13px;"></div>
+                            <span><p style="position:relative;top:-10px;">geschützte<br>Monate</p></span>
+                            <div class="circle base" style="background:#f59c00;position: relative;background: #c63231;top: -11px;"></div>
+                            <span><p class="base" style="position:relative;top:-25px;">ungeschützte<br>Monate</p></span>
                             
                         </div>
                     </div>
@@ -235,7 +235,7 @@
             <div class="chart_card margin_top_2">
                 <div class="brave_grid">
                     <div id="brave_22" class="align_center" >
-                        <p>Bravecto Behandlungen 2022</p>
+                        <h3>Bravecto Behandlungen 2022</h3>
                     </div>
                     <div id="brave_22_dog" class="justify_center align_center" >
                         <p id="brave_22_dog_p" class="justify_center" ></p>
@@ -259,7 +259,7 @@
                         <p id="brave_23_bg_dogcat_p"></p>
                     </div>
                     <div id="brave_23_b" class="justify_left align_center">
-                        <p>Bravecto Behandlungen 2023 bisher benötigt</p>
+                        <p>Bravecto Behandlungen 2023 benötigt</p>
                     </div>
                     <div id="brave_23_b_dog" class="justify_center align_center">
                         <p id="brave_23_b_dog_p"></p>
@@ -310,7 +310,7 @@
             <div style="height:20px;"></div>
         </section>
         <section class="hidden" id="section3">
-            <div class="border_padding">
+            <div class="border_padding justify_center">
                 <h3>Quellenangaben</h3>
             </div>
             <div class="chart_card" style="padding:2em;">
@@ -358,7 +358,7 @@
             <div class="border_padding">
                 <p>© 2023 Intervet International B.V., also known as MSD Animal Health.</p>
                 <p>All rights reserved. All trademarks are property of their respective owners.</p>
-                <a href="https://www.msd-tiergesundheit.de/datenschutz/" target=”_blank”>Datenschutz</a>
+                <a href="https://www.msd-tiergesundheit.de/datenschutz/" target=”_blank” style="font-size:14pt;">Datenschutz</a>
                 <p><b>Hinweis: Die individuell eingegebenen Daten werden weder gespeichert noch verarbeitet. Sie werden nach der Präsentation sofort gelöscht.</b></p>
                 <p>**Bravecto® Kautabletten: sofortige und anhaltende abtötende Wirkung gegen Flöhe (Ctenocephalides felis) und Zecken (Ixodes ricinus, Dermacentor reticulatus, D. variabilis) über 12 Wochen und gegen Rhipicephalus sanguineus über 8 Wochen. Anhaltende Zecken-abtötende Wirkung gegen Ixodes hexagonus vom 7. Tag bis zu 12 Wochen nach der Behandlung. Zur Behandlung der durch Demodex canis verursachten Demodikose und Sarcoptes-Räude (Sarcoptes scabiei var. canis). Zur Verringerung des Infektionsrisikos mit Babesia canis canis mittels Übertragung durch Dermacentor reticulatus und mit Dipylidium caninum mittels Übertragung durch Ctenocephalides felis für bis zu 12 Wochen. Die Wirkung erfolgt indirekt durch die Wirksamkeit des Tierarzneimittels gegen die Vektoren.</p>    
             </div>
