--- a/index.html
+++ b/index.html
@@ -95,17 +95,20 @@
                     <div id="anteil">
                         <p>Anteil mit Bravecto behandelte Tiere in Ihrer Praxis %</p>
                     </div>
-                    <div class="justify_center align_center" id="anteil_input1">
-                        <input class="center" type="text" id="b13"/><div style="margin-left:-13px;top:0;left:100px;"><span>%</span></div>
+                    <div class="justify_center align_center" style="position:relative;" id="anteil_input1">
+                        <input class="center" type="text" id="b13"/>
+                        <div style="position: absolute; top: 0; left: 160px;"><p>%</p></div>
                     </div>
-                    <div class="justify_center align_center" id="anteil_input2">
+                    <div class="justify_center align_center" style="position:relative;"  id="anteil_input2">
                         <input class="center" type="text" id="c13"/>
+                        <div style="position: absolute; top: 0; left: 160px;"><p>%</p></div>
                     </div>
                     <div id="abgeg">
                         <p>Abgegebene Bravecto Behandlungen 2022</p>
                     </div>
                     <div class="justify_center align_center" id="abgeg_input1">
                         <input class="center" type="text" id="b14"/>
+                        
                     </div>
                     <div class="justify_center align_center" id="abgeg_input2">
                         <input class="center" type="text" id="c14"/>
