Fixed callout line

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                     </div>
                     <div class="justify_center align_center" style="position:relative;" id="anteil_input1">
                         <input class="center" type="text" id="b13"/>
-                        <div style="position: absolute; top: 0; left: 160px;"><p>%</p></div>
+                        <div style="position: absolute; top: 0; left: 114px;"><p>%</p></div>
                     </div>
                     <div class="justify_center align_center" style="position:relative;"  id="anteil_input2">
                         <input class="center" type="text" id="c13"/>
-                        <div style="position: absolute; top: 0; left: 160px;"><p>%</p></div>
+                        <div style="position: absolute; top: 0; left: 114px;"><p>%</p></div>
                     </div>
                     <div id="abgeg">
                         <p>Abgegebene Bravecto Behandlungen 2022</p>
@@ -261,17 +261,17 @@
                     <div class="justify_center align_center" id="brave_23_bg_dogcat">
                         <p id="brave_23_bg_dogcat_p"></p>
                     </div>
-                    <div id="brave_23_b" class="justify_left align_center">
-                        <p>Bravecto Behandlungen 2023 benötigt</p>
+                    <div id="brave_23_b" class="justify_left align_center highlight">
+                        <p style="color:white">Bravecto Behandlungen 2023 benötigt</p>
                     </div>
-                    <div id="brave_23_b_dog" class="justify_center align_center">
-                        <p id="brave_23_b_dog_p"></p>
+                    <div id="brave_23_b_dog" class="justify_center align_center highlight">
+                        <p id="brave_23_b_dog_p" style="color:white"></p>
                     </div>
-                    <div id="brave_23_b_cat" class="justify_center align_center">
-                        <p id="brave_23_b_cat_p"></p>
+                    <div id="brave_23_b_cat" class="justify_center align_center highlight">
+                        <p id="brave_23_b_cat_p" style="color:white"></p>
                     </div>
-                    <div id="brave_23_b_dogcat" class="justify_center align_center">
-                        <p class="center" id="brave_23_b_dogcat_p"></p>
+                    <div id="brave_23_b_dogcat" class="justify_center align_center highlight">
+                        <p class="center" id="brave_23_b_dogcat_p" style="color:white"></p>
                     </div>
 
 
